post 'Why I started this blog?'

--- a/index.html
+++ b/index.html
@@ -27,15 +27,9 @@
         </div>
         <div class="posts">
             <div class="row">
-                <a href="posts/lorem-ipsum.html" class="posts-box">
-                    <h2 class="posts-box-h2">Lorem ipsum dolor sit amet, consectetur adipiscing ?</h2>
-                    <p class="posts-box-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi...</p>
-                </a>
-            </div>
-            <div class="row">
-                <a href="posts/lorem-ipsum.html" class="posts-box">
-                    <h2 class="posts-box-h2">Lorem ipsum dolor sit amet, consectetur adipiscing ?</h2>
-                    <p class="posts-box-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi...</p>
+                <a href="posts/why-i-started-this-blog.html" class="posts-box">
+                    <h2 class="posts-box-h2">Why I started this blog?</h2>
+                    <p class="posts-box-p">last day I watched a YouTube video about 21 Life Lessons for Teenagers. one of the suggestions was to create a blog and write your thought on that. I decided to create this blog in...</p>
                 </a>
             </div>
         </div>
