post 'A beautiful text that I found on internet'

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </div>
         <div class="posts">
             <div class="row">
+                <a href="posts/A-beautiful-text-that-I-found-on-internet.html" class="posts-box">
+                    <h2 class="posts-box-h2">A beautiful text that I found on internet</h2>
+                    <p class="posts-box-p">It’s been hard for you, I know, and it makes me sad that you don’t see yourself in the way I see you. Sometimes they are things in life that...</p>
+                </a>
+            </div>
+        </div>
+        <div class="posts">
+            <div class="row">
                 <a href="posts/My-experience-of-going-to-Mashhad-innovation-factory.html" class="posts-box">
                     <h2 class="posts-box-h2">My experience of going to Mashhad Innovation Factory</h2>
                     <p class="posts-box-p">Innovation Factories are the needs of all cities. and now in Mashhad, we have a place that all the startups can come together and work on the city's problems...</p>
